Fix readability issues with font weight and line spacing

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,7 +1,7 @@
 /* General */
 * {
   font-family: Roboto;
-  font-weight: 300;
+  font-weight: regular;
 }
 
 #content {
@@ -61,6 +61,7 @@ header img{
 article {
   border: 1px solid #bdbdbd;
   border-radius: 10px;
+  line-height: 1.5;
   margin-left: 10%;
   margin-right: 10%;
   margin-bottom: 30px;
